--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,12 @@
-name: Auto Create PR
-
-on:
-  push:
-    branches:
-      - dev_*
+on: push
 
 jobs:
-    job1:
-        runs-on: ubuntu-latest
-        steps:
-        - run: pwd
-        - run: ls
-    job2:
-        runs-on: windows-latest
-        steps:
-        - run: node --version
+   job1:
+    runs-on: ubuntu-latest
+    steps:
+    - run: pwd
+    - run: ls
+   job2:
+    runs-on: windows-latest
+    steps:
+    - run: node --version
